# openpaw

./: .gitattributes  .gitignore  Cargo.toml  OpenPaw Service.bat  README.md  WEBUI_GUIDE.md  check.json  codebase_audit.md  config.example.json  implementation.md  install.ps1  install.sh  securityaudit.md  service.ps1  skills-lock.json
.github/workflows/: release.yml
openpaw/: .gitignore  README.md
openpaw/src/: agent_routing.rs  build_options.rs  capabilities.rs  channel_adapters.rs  channel_loop.rs  config_parse.rs  config_types.rs  cron.rs  daemon.rs  gateway.rs  heartbeat.rs  http_util.rs  identity.rs  main.rs  mcp.rs  migration.rs  multimodal.rs  observability.rs  portable_atomic.rs  rag.rs  runtime.rs  service.rs  session.rs  skills.rs  sse_client.rs  state.rs  update.rs  util.rs  websocket.rs
openpaw/src/agent/: commands.rs  context_tokens.rs  dispatcher.rs  max_tokens.rs  mod.rs  prompt.rs
openpaw/src/channels/: cli.rs  whatsapp.rs
openpaw/src/interactions/: choices.rs
openpaw/src/memory/: mod.rs
openpaw/src/providers/: openrouter.rs
openpaw/src/tools/: browser.rs  composio.rs  cron_list.rs  cron_remove.rs  cron_run.rs  cron_runs.rs  cron_update.rs  file_read.rs  hardware_info.rs  hardware_memory.rs  http_request.rs  i2c.rs  image.rs  memory_forget.rs  memory_list.rs  memory_recall.rs  message.rs  mod.rs  pushover.rs  registry.rs  schedule.rs  screenshot.rs  spi.rs
openpaw/src/workspace_templates/: mod.rs
src/: agent_mailbox.rs  agent_routing.rs  approval.rs  auth.rs  bus.rs  capabilities.rs  channel_adapters.rs  channel_catalog.rs  channel_loop.rs  channel_manager.rs  config.rs  config_mutator.rs  config_parse.rs  config_types.rs  cost.rs  cron.rs  daemon.rs  dialectic.rs  dialectic_enhanced.rs  doctor.rs  dream.rs  events.rs  gateway.rs  goals.rs  hardware.rs  health.rs  heartbeat.rs  integrations.rs  json_util.rs  main.rs  mcp.rs  migration.rs  model_router.rs  multimodal.rs  net_security.rs  observability.rs  onboard.rs  peripherals.rs  plan.rs  platform.rs  (+20 more)
src/agent/: background_review.rs  commands.rs  compaction.rs  context_tokens.rs  curator.rs  dispatcher.rs  max_tokens.rs  memory_loader.rs  mod.rs  prompt.rs  prompt_cache.rs  response_cache.rs  routing.rs
src/channels/: cli.rs  dispatch.rs  email.rs  mod.rs  root.rs  telegram.rs  whatsapp.rs  whatsapp_bridge_manager.rs  whatsapp_native.rs
src/channels/whatsapp_native_bridge/: go.mod  main.go
src/interactions/: choices.rs
src/memory/: embeddings.rs  hygiene.rs  mod.rs  postgres.rs  sqlite.rs
src/memory/engines/: lru.rs  markdown.rs  mod.rs  none.rs  registry.rs
src/providers/: anthropic.rs  circuit_breaker.rs  error_classify.rs  factory.rs  fallback.rs  gemini.rs  gemini_cli.rs  kilocode.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  rate_limiter.rs  reliable.rs  sse.rs
src/skills/: mod.rs  self_improve.rs  usage.rs
src/tools/: agent_post.rs  agent_recv.rs  approval_respond.rs  browser.rs  browser_open.rs  cache.rs  calculator.rs  cdp.rs  composio.rs  cron_add.rs  cron_list.rs  cron_remove.rs  cron_run.rs  cron_runs.rs  cron_update.rs  cron_utils.rs  delegate.rs  email.rs  event_emit.rs  event_watch.rs  file_append.rs  file_delete.rs  file_edit.rs  file_read.rs  file_write.rs  git.rs  goals.rs  google_meet.rs  hardware_info.rs  hardware_memory.rs  http_request.rs  i2c.rs  image.rs  memory_forget.rs  memory_list.rs  memory_md.rs  memory_recall.rs  memory_store.rs  message.rs  mod.rs  (+34 more)
src/workspace_templates/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md  mod.rs
state/telegram/: update-offset-main.json
static/: README.md  app.js  index.html  styles.css
