[package]
name = "openpaw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0"
dotenvy = "0.15.7"
libc = "0.2.182"
postgres = "0.19.7"
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["json", "blocking", "form", "multipart"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
base64 = "0.22.1"
crossbeam-channel = "0.5.12"
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
regex = "1.12.3"
toml = "1.0.3"
which = "8.0.0"
pulldown-cmark = "0.13.1"
sysinfo = "0.33.1"
chacha20poly1305 = "0.10"
hex = "0.4"
